COD-187: implement report ingestion API
